Bug fix for invisible widget overlay disabling the top menu; also new tty window requires redirect, rather than window open

--- a/graphterm/www/graphterm.css
+++ b/graphterm/www/graphterm.css
@@ -221,7 +221,7 @@ img.gterm-img {
     opacity: 0.5;
     z-index: 2000;
     position: fixed;
-    top: 0;
+    top: 1.5em;
     right: 1em;
     width: 35%;
     height: 35%;
